# 6502_emulator

./: .gitignore  CMakeLists.txt  cpu.cpp  cpu.h  globals.h  main.cpp  memory.cpp  memory.h
src/: CMakeLists.txt  cpu.cpp  cpu.h  globals.h  main.cpp  memory.cpp  memory.h
tests/: CMakeLists.txt  LoadRegisterTests.cpp  mainUnitTests.cpp
